Updated og + meta

--- a/index.html
+++ b/index.html
@@ -3,11 +3,12 @@
 <head>
   <meta charset="utf-8">
   <title>Anastasiia Kazak</title>
-  <meta content="Анастасія Казак" property="og:title">
-  <meta content="SMM - КОНТЕНТ МЕЙКЕР" property="og:description">
+  <meta name="description" content="Створення контенту “під ключ”, естетичні відео Reels. SMM-дизайн у Figma. Просування в соціальних мережах.">
+  <meta content="КАЗАК АНАСТАСІЯ | SMM • КОНТЕНТ-МЕЙКЕР • SMM-ДИЗАЙН" property="og:title">
+  <meta content="Створення контенту “під ключ”, естетичні відео Reels. SMM-дизайн у Figma. Просування в соціальних мережах." property="og:description">
   <meta content="https://uploads-ssl.webflow.com/65d4a820b9d67ca903ed1cdd/65d719b7c6c6073155176063_opengraph-image.png" property="og:image">
-  <meta content="Анастасія Казак" property="twitter:title">
-  <meta content="SMM - КОНТЕНТ МЕЙКЕР" property="twitter:description">
+  <meta content="КАЗАК АНАСТАСІЯ | SMM • КОНТЕНТ-МЕЙКЕР • SMM-ДИЗАЙН" property="twitter:title">
+  <meta content="Створення контенту “під ключ”, естетичні відео Reels. SMM-дизайн у Figma. Просування в соціальних мережах." property="twitter:description">
   <meta content="https://uploads-ssl.webflow.com/65d4a820b9d67ca903ed1cdd/65d719b7c6c6073155176063_opengraph-image.png" property="twitter:image">
   <meta property="og:type" content="website">
   <meta content="summary_large_image" name="twitter:card">
