--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
                 <a href="https://www.instagram.com/kazak.smm/" target="_blank" class="portf-link-wrap w-inline-block">
                   <div class="portf-link-item-wrap">
                     <div class="portf-link-item_h"><img src="images/skill-icons_instagram.svg" loading="lazy" width="12" alt="" class="portf-link-item_icon">
-                      <div class="portf-link-item_text">Stories</div>
+                      <div class="portf-link-item_text">Кейси</div>
                     </div>
                     <div class="portf-link-item_arr"><img src="images/arrow_right_alt.svg" loading="lazy" width="24" alt=""></div>
                   </div>
@@ -87,7 +87,7 @@
                 <a href="https://www.tiktok.com/@anastasiiacreator?_t=8k2cZXbXUNK&amp;_r=1" target="_blank" class="portf-link-wrap w-inline-block">
                   <div data-w-id="b9726b97-8ed0-c151-9687-a69f4d3880ef" class="portf-link-item-wrap">
                     <div class="portf-link-item_h"><img src="images/logos_tiktok-icon.svg" loading="lazy" width="12" alt="" class="portf-link-item_icon">
-                      <div class="portf-link-item_text">Video</div>
+                      <div class="portf-link-item_text">Відео</div>
                     </div>
                     <div class="portf-link-item_arr"><img src="images/arrow_right_alt.svg" loading="lazy" width="24" alt=""></div>
                   </div>
